fix scrollbar

--- a/src/styles/locomotive-scroll.css
+++ b/src/styles/locomotive-scroll.css
@@ -11,6 +11,7 @@
     bottom: 0;  
   inset: 0;
   backface-visibility: hidden;
+	transform: translateZ(0);
 }
 
 
